--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-weibo_username:     zcseven7
+weibo_username:     2254294270
 zhihu_username:     zcseven7
 github_username:    zcseven7
 twitter_username:  zcseven7
