--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ zhihu_username:     zcseven7
 github_username:    zcseven7
 twitter_username:  zcseven7
 facebook_username:  zcseven7
+jianshu_username:   d584bbce5c12
 
 
 
